// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renders <Space /> correctly with view component. Should apply margin to child component 1`] = `
<div>
  <div
    class="Viewweb__View-sc-1cphyjf-0 ljAogI Spaceweb__Space-njatzl-0 XfsTT"
  >
    Flex Item
  </div>
</div>
`;

exports[`Renders <Space /> correctly with view component. Should apply padding to child component 1`] = `
<div>
  <div
    class="Viewweb__View-sc-1cphyjf-0 ljAogI Spaceweb__Space-njatzl-0 jqwxLT"
  >
    Flex Item
  </div>
</div>
`;
